定时任务开启与关闭，总体与明细

--- a/AutoSchedule/Views/Home/Index.cshtml
+++ b/AutoSchedule/Views/Home/Index.cshtml
@@ -2,5 +2,73 @@
 @{
     ViewData["Title"] = "Index";
 }
-<p>index</p>
-    
+
+<table id="TaskPlan" lay-filter="TaskPlan"></table>
+<table id="TaskPlanDetail" lay-filter="TaskPlanDetail"></table>
+<div style="text-align: center;">
+    <div class="layui-inline">
+        <button class="layui-btn layui-btn-lg layui-btn-radius layui-btn-normal" id="begin">开启以上定时任务</button>
+        <button class="layui-btn layui-btn-lg layui-btn-radius layui-btn-danger" id="stop">停止以上定时任务</button>
+    </div>
+    <div class="alert"></div>
+</div>
+<script src="~/layui.js"></script>
+<script src="~/lib/jquery/dist/jquery.js"></script>
+<script type="text/javascript">
+    $("#begin").click(beginPlan);
+     function beginPlan() {
+         $.get("/Home/BeginTaskPlan?guid=", function (dataResult) {
+             $('.alert').html(dataResult.msg).addClass('alert-success').show().delay(2000).fadeOut();
+            }, "json");
+        }
+    $("#stop").click(stopPlan);
+     function stopPlan() {
+         $.get("/Home/StopTaskPlan", function (dataResult) {
+             $('.alert').html(dataResult.msg).addClass('alert-success').show().delay(2000).fadeOut();
+            },"json");
+        }
+</script>
+<style type="text/css">
+
+    #getVerifyCode {
+        cursor: pointer;
+        outline: none;
+    }
+
+    .alert {
+        display: none;
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        min-width: 200px;
+        margin-left: -100px;
+        z-index: 99999;
+        padding: 15px;
+        border: 1px solid transparent;
+        border-radius: 4px;
+    }
+
+    .alert-success {
+        color: #3c763d;
+        background-color: #dff0d8;
+        border-color: #d6e9c6;
+    }
+
+    .alert-info {
+        color: #31708f;
+        background-color: #d9edf7;
+        border-color: #bce8f1;
+    }
+
+    .alert-warning {
+        color: #8a6d3b;
+        background-color: #fcf8e3;
+        border-color: #faebcc;
+    }
+
+    .alert-danger {
+        color: #a94442;
+        background-color: #f2dede;
+        border-color: #ebccd1;
+    }
+</style>
