--- a/AutoSchedule/Views/TaskPlan/TaskPlanEdit.cshtml
+++ b/AutoSchedule/Views/TaskPlan/TaskPlanEdit.cshtml
@@ -26,16 +26,16 @@
     <form class="layui-form">
 
         <div class="layui-form-item" hidden="hidden">
-            <label class="layui-form-label">CODE</label>
+            <label class="layui-form-label">GUID</label>
             <div class="layui-input-block">
-                <input type="text" name="CODE" lay-verify="required" autocomplete="off" placeholder="" class="layui-input" value="@Model.GUID">
+                <input type="text" name="GUID" lay-verify="required" autocomplete="off" placeholder="" class="layui-input" value="@Model.GUID">
             </div>
         </div>
 
         <div class="layui-form-item" hidden="hidden">
-            <label class="layui-form-label">GUID</label>
+            <label class="layui-form-label">CODE</label>
             <div class="layui-input-block">
-                <input type="text" name="GUID" lay-verify="required" autocomplete="off" placeholder="" class="layui-input" value="@Model.CODE">
+                <input type="text" name="CODE" lay-verify="required" autocomplete="off" placeholder="" class="layui-input" value="@Model.CODE">
             </div>
         </div>
 
