完全动态json字符

--- a/AutoSchedule/Views/Shared/_Layout.cshtml
+++ b/AutoSchedule/Views/Shared/_Layout.cshtml
@@ -120,8 +120,8 @@
                     { field: 'AfterSqlstring2', title: '调用异常后执行语句', sort: true },
                     { field: 'FType', title: '单据类型', sort: true },
                     { field: 'IsStart', title: '是否启用', sort: true },
-                    { field: 'MainKey', title: '主关键字段', sort: true }
-                    , { fixed: 'right', title: '操作', toolbar: '#barDemo', width: 178 }
+                    { field: 'MainKey', title: '主关键字段', sort: true },
+                    { fixed: 'right', title: '操作', toolbar: '#barDemo', width: 178 }
                 ]]
             });
 
