--- a/AutoSchedule/Views/TaskPlan/TaskPlanAdd.cshtml
+++ b/AutoSchedule/Views/TaskPlan/TaskPlanAdd.cshtml
@@ -63,6 +63,13 @@
         </div>
 
         <div class="layui-form-item">
+            <label class="layui-form-label">Api地址</label>
+            <div class="layui-input-block">
+                <input type="text" name="TaskUrl" lay-verify="required" autocomplete="off" placeholder="" class="layui-input">
+            </div>
+        </div>
+
+        <div class="layui-form-item">
             <div class="layui-input-block">
                 <button type="button" class="layui-btn" lay-filter="enSure" lay-submit="">确定</button>
                 <button type="reset" class="layui-btn layui-btn-primary">重置</button>
