--- a/AutoSchedule/Views/TaskPlan/TaskPlanEdit.cshtml
+++ b/AutoSchedule/Views/TaskPlan/TaskPlanEdit.cshtml
@@ -77,6 +77,12 @@
                 </select>
             </div>
         </div>
+        <div class="layui-form-item">
+            <label class="layui-form-label">Api地址</label>
+            <div class="layui-input-block">
+                <input type="text" name="TaskUrl" lay-verify="required" autocomplete="off" placeholder="" class="layui-input">
+            </div>
+        </div>
 
         <div class="layui-form-item">
             <div class="layui-input-block">
